<resources>
    <string name="app_name">MyConstraintLayoutサンプル</string>
    <string name="tv_title">必要な情報を入力してください。</string>
    <string name="tv_name">名前</string>
    <string name="tv_mail">メールアドレス</string>
    <string name="tv_mail_title">タイトル</string>
    <string name="tv_comment">質問内容</string>
    <string name="bt_confirm">確認</string>
    <string name="bt_send">送信</string>
    <string name="bt_clear">クリア</string>

    <string name="dialog_title">以下の内容でよろしいですか。</string>
<!--    <string name="dialog_msg"></string>-->
    <string name="dialog_btn_ok">送信</string>
    <string name="dialog_btn_ng">クリア</string>
    <string name="dialog_btn_nu">確認</string>
    <string name="dialog_ok_toast">送信しました。</string>
    <string name="dialog_ng_toast">送信を取り消しました。</string>
    <string name="dialog_nu_toast">確認の処理を終了しました。</string>
</resources>